<resources>
    <string name="app_name">Discussion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">Create</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_with_phone_number">Enter with phone number</string>
    <string name="forgot_your_password">Forget your password?</string>
    <string name="no_account">No account?</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_number">Phone number +1 000–000–0000</string>
    <string name="CancelChatRequest">Cancel Chat Request</string>
    <string name="AcceptChatRequest">Accept chat request</string>
    <string name="new_message">New message…</string>
    <string name="there_are_no_chats">There are no chats :(</string>
    <string name="you_can_choose_a_status_from_the_proposed">You can choose a status from the proposed…</string>
    <string name="update">Update</string>
    <string name="set_your_status">Set your status</string>
    <string name="there_are_no_messages">There are no messages…</string>
    <string name="username">username</string>
    <string name="status">Status: </string>
    <string name="send_message">Send Message</string>
    <string name="cancel">Cancel</string>
    <string name="instagram_profile"> Go to instagram profile</string>
    <string name="you_can_also_set_your_instagram_profile">You can also set your instagram profile</string>
    <string name="please_do_not_use_your_main_passwords_we_have_not_invested_much_in_security">Please do not use your main passwords, we have not invested much in security :)</string>
    <string name="save_image">Save Image</string>
    <string name="name">Name:</string>
    <string name="code">Code</string>
    <string name="send_code">Send Code</string>
    <string name="verify">Verify</string>
    <string name="last_seen">Last Seen</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="receiver_messages">Receiver Messages</string>
    <string name="_00_00">00:00</string>
    <string name="sender_messages">Sender Messages</string>
    <string name="accept">Accept</string>
    <string name="settings">Settings</string>
    <string name="find_friends">Find Friends</string>
    <string name="create_group">Create Group</string>
    <string name="sign_out">Sign out</string>

    <string-array name="status_list">
        <item> Do not disturb </item>
        <item> Sleeping </item>
        <item> Always online </item>
        <item> Having fun </item>
        <item> Busy </item>
        <item> A lot of work </item>

    </string-array>

</resources>
